--- a/templates/mavsdk-swift2-h/struct.j2
+++ b/templates/mavsdk-swift2-h/struct.j2
@@ -14,7 +14,7 @@
 {% endfor -%}
 
 {%- for field in fields %}
-{% if field.type_info.is_string %}@property (nonatomic, strong) {{ field.type_info.name }} *{{ field.name.lower_camel_case }};{% elif field.type_info.is_primitive %}@property (nonatomic, assign) {{ field.type_info.name }} {{ field.name.lower_camel_case }};{% elif field.type_info.is_enum %}@property (nonatomic, assign) MAVSDK{{ plugin_name.upper_camel_case }}{{ field.type_info.name }} {{ field.name.lower_camel_case }};{% elif field.type_info.is_repeated %}@property (nonatomic, strong) NSMutableArray *{{ field.name.lower_camel_case }}; {% else %}@property (nonatomic, strong) MAVSDK{{ plugin_name.upper_camel_case }}{{ field.type_info.name }} *{{ field.name.lower_camel_case }};{% endif %}
+{% if field.type_info.is_string %}@property (nonatomic, strong) {{ field.type_info.name }} *{{ field.name.lower_camel_case }};{% elif field.type_info.is_repeated %}@property (nonatomic, strong) NSMutableArray *{{ field.name.lower_camel_case }};{% elif field.type_info.is_enum %}@property (nonatomic, assign) MAVSDK{{ plugin_name.upper_camel_case }}{{ field.type_info.name }} {{ field.name.lower_camel_case }};{% elif field.type_info.is_primitive %}@property (nonatomic, assign) {{ field.type_info.name }} {{ field.name.lower_camel_case }}; {% else %}@property (nonatomic, strong) MAVSDK{{ plugin_name.upper_camel_case }}{{ field.type_info.name }} *{{ field.name.lower_camel_case }};{% endif %}
 {%- endfor %}
 
 
