--- a/templates/mavsdk-swift2-mm/file.j2
+++ b/templates/mavsdk-swift2-mm/file.j2
@@ -4,24 +4,6 @@
 #include <mavsdk/mavsdk.h>
 #include <mavsdk/plugins/{{ plugin_name.lower_snake_case }}/{{ plugin_name.lower_snake_case }}.h>
 
-@implementation MAVSDK{{ plugin_name.upper_camel_case }}
-
-mavsdk::{{ plugin_name.upper_camel_case }} *{{ plugin_name.lower_camel_case }};
-
-
-+(id)alloc{
-    return [super alloc];
-}
-
-- (id)initWithMavsdkSwift2Impl:(MavsdkSwift2Impl*)mavsdkSwift2Impl {
-    {{ plugin_name.lower_camel_case }} = new mavsdk::{{ plugin_name.upper_camel_case }}(*[mavsdkSwift2Impl mavsdkSystem]);
-    return [super init];
-}
-
-{% for method in methods -%}
-{{ method }}
-{% endfor %}
-
 {% for enum in enums %}
 {{ enum }}
 {% endfor %}
@@ -30,4 +12,24 @@ mavsdk::{{ plugin_name.upper_camel_case }} *{{ plugin_name.lower_camel_case }};
 {{ struct }}
 {% endfor %}
 
+@implementation MAVSDK{{ plugin_name.upper_camel_case }}
+
+mavsdk::{{ plugin_name.upper_camel_case }} *{{ plugin_name.lower_snake_case }};
+
+
++(id)alloc{
+    return [super alloc];
+}
+
+- (id)initWithMavsdkSwift2Impl:(MavsdkSwift2Impl*)mavsdkSwift2Impl {
+    {{ plugin_name.lower_snake_case }} = new mavsdk::{{ plugin_name.upper_camel_case }}(*[mavsdkSwift2Impl mavsdkSystem]);
+    return [super init];
+}
+
+{% for method in methods -%}
+{{ method }}
+{% endfor %}
+
 @end
+
+
