--- a/templates/mavsdk_server/stream.j2
+++ b/templates/mavsdk_server/stream.j2
@@ -5,11 +5,10 @@ grpc::Status Subscribe{{ name.upper_camel_case }}(grpc::ServerContext* /* contex
     register_stream_stop_promise(stream_closed_promise);
 
     auto is_finished = std::make_shared<bool>(false);
-
-    std::mutex subscribe_mutex{};
+    auto subscribe_mutex = std::make_shared<std::mutex>();
 
     _{{ plugin_name.lower_snake_case }}.{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{% if not param.type_info.is_primitive %}translateFromRpc{{ param.name.upper_camel_case }}({% endif %}request->{{ param.name.lower_snake_case }}(){% if not param.type_info.is_primitive %}){% endif %}, {% endfor %}
-        [this, &writer, &stream_closed_promise, is_finished, &subscribe_mutex](
+        [this, &writer, &stream_closed_promise, is_finished, subscribe_mutex](
             {%- if has_result -%}mavsdk::{{ plugin_name.upper_camel_case }}::Result result,{%- endif -%}
             const {% if return_type.is_repeated %}std::vector<{% if not return_type.is_primitive %}{{ package.lower_snake_case.split('.')[0] }}::{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.inner_name }}>{% else %}{%- if not return_type.is_primitive %}{{ package.lower_snake_case.split('.')[0] }}::{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.name }}{% endif %} {{ name.lower_snake_case }}) {
 
@@ -37,18 +36,20 @@ grpc::Status Subscribe{{ name.upper_camel_case }}(grpc::ServerContext* /* contex
         rpc_response.set_allocated_{{ plugin_name.lower_snake_case }}_result(rpc_{{ plugin_name.lower_snake_case }}_result);
     {% endif %}
 
-        std::unique_lock<std::mutex> lock(subscribe_mutex);
+        std::unique_lock<std::mutex> lock(*subscribe_mutex);
         if (!*is_finished && !writer->Write(rpc_response)) {
             {% if not is_finite %}
             _{{ plugin_name.lower_snake_case }}.subscribe_{{ name.lower_snake_case }}(nullptr);
             {% endif %}
             *is_finished = true;
             unregister_stream_stop_promise(stream_closed_promise);
-            lock.unlock();
             stream_closed_promise->set_value();
         }
     });
 
     stream_closed_future.wait();
+    std::unique_lock<std::mutex> lock(*subscribe_mutex);
+    *is_finished = true;
+
     return grpc::Status::OK;
 }
