--- a/templates/plugin_h/stream.j2
+++ b/templates/plugin_h/stream.j2
@@ -1,19 +1,38 @@
 {% if is_async %}
     {% if is_finite %}
 /**
-* @brief Callback type for {{ name.lower_snake_case }}_async.
-*/
-    {% else %}
-/**
-* @brief Callback type for subscribe_{{ name.lower_snake_case }}.
-*/
-    {% endif %}
+ * @brief Callback type for {{ name.lower_snake_case }}_async.
+ */
 using {{ name.upper_camel_case }}Callback = std::function<void({% if has_result %}Result, {% endif %}{{ return_type.name }})>;
 
 /**
  * @brief {{ method_description | replace('\n', '\n *')}}
  */
-void {% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}{{ name.upper_camel_case }}Callback callback);
+void {{ name.lower_snake_case }}_async({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}const {{ name.upper_camel_case }}Callback& callback);
+
+    {% else %}
+
+/**
+ * @brief Callback type for subscribe_{{ name.lower_snake_case }}.
+ */
+using {{ name.upper_camel_case }}Callback = std::function<void({% if has_result %}Result, {% endif %}{{ return_type.name }})>;
+
+/**
+ * @brief Handle type for subscribe_{{ name.lower_snake_case }}.
+ */
+using {{ name.upper_camel_case }}Handle = Handle<{% if has_result %}Result, {% endif %}{{ return_type.name }}>;
+
+/**
+ * @brief {{ method_description | replace('\n', '\n *')}}
+ */
+{{ name.upper_camel_case }}Handle subscribe_{{ name.lower_snake_case }}({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}const {{ name.upper_camel_case }}Callback& callback);
+
+/**
+ * @brief Unsubscribe from subscribe_{{ name.lower_snake_case }}
+ */
+void unsubscribe_{{ name.lower_snake_case }}({{ name.upper_camel_case }}Handle handle);
+
+    {% endif %}
 {% endif %}
 
 {% if is_sync %}
