core: split handle out of callback_list
That way callback_list doesn't have to be public.

--- a/templates/plugin_h/file.j2
+++ b/templates/plugin_h/file.j2
@@ -18,7 +18,7 @@
 {% else %}
 #include "mavsdk/plugin_base.h"
 {% endif %}
-#include "mavsdk/callback_list.h"
+#include "mavsdk/handle.h"
 
 namespace mavsdk {
 
