Add mutex to sync requests

--- a/templates/plugin_cpp/file.j2
+++ b/templates/plugin_cpp/file.j2
@@ -3,6 +3,7 @@
 // (see https://github.com/mavlink/MAVSDK-Proto/blob/master/protos/{{ plugin_name.lower_snake_case }}/{{ plugin_name.lower_snake_case }}.proto)
 
 #include <iomanip>
+#include <mutex>
 
 #include "{{ plugin_name.lower_snake_case }}_impl.h"
 #include "plugins/{{ plugin_name.lower_snake_case }}/{{ plugin_name.lower_snake_case }}.h"
