--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -98,13 +98,13 @@
   --vp-home-hero-name-background: -webkit-linear-gradient(
     120deg,
     #f46522 30%,
-    #41d1ff
+    #f46522
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
-    #fe9934 50%,
-    #47caff 50%
+    white 50%,
+    white 50%
   );
   --vp-home-hero-image-filter: blur(44px);
 }
