Reorganise files for more autogen

--- a/templates/file.cpp.j2
+++ b/templates/file.cpp.j2
@@ -3,7 +3,8 @@
 // (see https://github.com/mavlink/MAVSDK-Proto/blob/main/protos/{{ plugin_name.lower_snake_case }}/{{ plugin_name.lower_snake_case }}.proto)
 
 #include "{{ plugin_name.lower_snake_case }}.h"
-#include "plugins/{{ plugin_name.lower_snake_case }}/{{ plugin_name.lower_snake_case }}.h"
+
+#include <mavsdk/plugins/{{ plugin_name.lower_snake_case }}/{{ plugin_name.lower_snake_case }}.h>
 #include <cstring>
 #include <vector>
 
